--- a/scopes/component/ui/component-tooltip/component-tooltip.module.scss
+++ b/scopes/component/ui/component-tooltip/component-tooltip.module.scss
@@ -1,4 +1,12 @@
 .list {
   list-style: revert;
   list-style-position: inside;
+
+  > li:only-child {
+    list-style: none;
+  }
+}
+
+.tooltip {
+  font-size: 12px;
 }
