status resolver and tooltip: - fixed comma separator - updated status letters - fixed arrangement to be the same in both

--- a/scopes/component/ui/component-status-resolver/component-status-resolver.module.scss
+++ b/scopes/component/ui/component-status-resolver/component-status-resolver.module.scss
@@ -1,6 +1,9 @@
 .statusLine {
   display: flex;
   align-items: baseline;
+  > div:not(:last-of-type)::after {
+    content: ',';
+  }
   .modified {
     color: #ff8b00 !important;
   }
