--- a/scopes/component/ui/deprecation-icon/deprecation-icon.module.scss
+++ b/scopes/component/ui/deprecation-icon/deprecation-icon.module.scss
@@ -1,6 +1,7 @@
 .deprecatedTooltip {
+  padding: 2px 5px;
   > div {
-    padding: 2px 5px !important;
+    padding: unset !important;
   }
 }
 .deprectaedTooltipContent {
