--- a/scopes/design/ui/Avatar/styles.module.scss
+++ b/scopes/design/ui/Avatar/styles.module.scss
@@ -8,6 +8,7 @@
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
+  border: 1px solid var(--border-color);
 
   .tooltip {
     white-space: nowrap;
