remove color and use css variable

--- a/scopes/design/ui/Avatar/styles.module.scss
+++ b/scopes/design/ui/Avatar/styles.module.scss
@@ -48,7 +48,7 @@
 }
 
 .isOwner {
-  border: 2px solid var(--steel-color, #878c9a);
+  border: 2px solid var(--steel-color);
   position: absolute;
   width: calc(100% + 4px);
   height: calc(100% + 4px);
