update texts and link

--- a/scopes/ui-foundation/empty-component-gallery/empty-component-gallery.module.scss
+++ b/scopes/ui-foundation/empty-component-gallery/empty-component-gallery.module.scss
@@ -21,6 +21,11 @@
   > span:last-child {
     font-weight: bold;
   }
+  .purpleLink {
+    color: var(--base-highlight);
+    text-decoration: none;
+    cursor: pointer;
+  }
 }
 
 .bottomText {
