install new sizes component and add arrow icon in empty scope

--- a/scopes/ui-foundation/empty-component-gallery/empty-component-gallery.module.scss
+++ b/scopes/ui-foundation/empty-component-gallery/empty-component-gallery.module.scss
@@ -21,10 +21,16 @@
   > span:last-child {
     font-weight: bold;
   }
-  .purpleLink {
-    color: var(--base-highlight);
-    text-decoration: none;
-    cursor: pointer;
+}
+
+.purpleLink {
+  color: var(--base-highlight);
+  text-decoration: none;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  .text {
+    margin-right: 5px;
   }
 }
 
