--- a/scopes/react/component-highlighter/frame/frame.module.scss
+++ b/scopes/react/component-highlighter/frame/frame.module.scss
@@ -2,7 +2,7 @@ $border: 2;
 $padding: 4;
 
 .overlayBorder {
-  border: $border * 1px solid var(--component-highlighter-border, #f83d6c);
+  border: $border * 1px solid var(--component-highlighter-border, #eebcc9);
 
   border-radius: 11px;
   padding: $padding * 1px;
