fix white splitter around preview iframe

--- a/scopes/compositions/compositions/compositions.module.scss
+++ b/scopes/compositions/compositions/compositions.module.scss
@@ -1,3 +1,4 @@
+@import '~@teambit/ui.constants.z-indexes/z-indexes.module.scss';
 $panelBg: #fafafa;
 
 .compositionsPage {
@@ -22,7 +23,6 @@ $panelBg: #fafafa;
 }
 
 .right {
-  position: relative;
   background: $panelBg;
   overflow-y: auto;
   // this is to fix the right panel when it gets too big or too small
@@ -32,7 +32,11 @@ $panelBg: #fafafa;
 
 .splitter {
   position: relative;
-  border-right: 1px solid var(--border-color, #ededed);
+
+  > :first-child {
+    z-index: $nav-z-index + 1;
+    position: absolute;
+  }
 }
 
 .collapser {
