--- a/scopes/workspace/workspace/ui/workspace/workspace.module.scss
+++ b/scopes/workspace/workspace/ui/workspace/workspace.module.scss
@@ -1,3 +1,5 @@
+@import '~@teambit/ui.constants.z-indexes/z-indexes.module.scss';
+
 .emptyContainer {
   height: 100vh;
 }
@@ -22,7 +24,11 @@
 
 .splitter {
   position: relative;
-  border-left: 1px solid var(--border-color, #ededed);
+
+  > :first-child {
+    z-index: $nav-z-index + 1;
+    position: absolute;
+  }
 }
 
 .sidebar {
