--- a/scopes/compositions/compositions/compositions.module.scss
+++ b/scopes/compositions/compositions/compositions.module.scss
@@ -66,7 +66,7 @@ $panelBg: #fafafa;
   padding: 16px 8px 0 8px;
 }
 
-.compositionsIframe {
+.compositionsIframe:not(:only-child) {
   border: 8px solid var(--border-color, #ededed);
   box-sizing: border-box;
 }
