add react-tooltip to user avatar

--- a/scopes/design/ui/Avatar/styles.module.scss
+++ b/scopes/design/ui/Avatar/styles.module.scss
@@ -27,6 +27,9 @@
     text-align: center;
     display: inline-block;
   }
+  .tooltip {
+    max-width: 13ch;
+  }
 }
 .avatarImg {
   position: absolute;
