update avatar tooltip to show arrow, and not render tolltip on mobile

--- a/scopes/design/ui/Avatar/styles.module.scss
+++ b/scopes/design/ui/Avatar/styles.module.scss
@@ -27,6 +27,9 @@
     text-align: center;
     display: inline-block;
   }
+  .tooltip {
+    overflow: unset;
+  }
 }
 .avatarImg {
   position: absolute;
