use new border color for component card

--- a/scopes/explorer/ui/base-component-card/card/card.module.scss
+++ b/scopes/explorer/ui/base-component-card/card/card.module.scss
@@ -1,6 +1,6 @@
 .componentCard {
   position: relative;
-  border-color: var(--border-color, #ededed);
+  border-color: var(--light-border-color, #cccfd4);
   border-width: 1px;
   border-style: solid;
   width: 100%;
