--- a/scopes/explorer/ui/base-component-card/preview-container/preview-container.module.scss
+++ b/scopes/explorer/ui/base-component-card/preview-container/preview-container.module.scss
@@ -13,7 +13,7 @@
   left: 0;
   right: 0;
   overflow: hidden;
-  border-bottom: 1px solid var(--border-color, #ededed);
+  border-bottom: 1px solid var(--light-border-color, #cccfd4);
 }
 
 .emptyPreview {
