--- a/scopes/react/component-highlighter/component-highlighter/component-highlighter.module.scss
+++ b/scopes/react/component-highlighter/component-highlighter/component-highlighter.module.scss
@@ -5,7 +5,11 @@
   box-sizing: border-box;
   height: 100vh;
 
-  transition: all 300ms;
+  transition: border 300ms;
+
+  --bit-highlighter-color: #eebcc9;
+  --bit-highlighter-color-light: #f6dae2;
+  --bit-highlighter-color-active: #e79db1;
 
   &.active {
     border-width: 8px;
@@ -14,4 +18,5 @@
 
 .label {
   font-family: sans-serif;
+  padding: 8px;
 }
