--- a/scopes/react/component-highlighter/label/default-lable/default-label.module.scss
+++ b/scopes/react/component-highlighter/label/default-lable/default-label.module.scss
@@ -12,10 +12,10 @@
 
   filter: saturate(100%) brightness(100%);
 
-  //hover highlight:
-  &:hover {
-    filter: saturate(109%) brightness(109%);
-  }
+  // //hover highlight:
+  // &:hover {
+  //   filter: saturate(109%) brightness(109%);
+  // }
 
   //reset styles from card:
   padding: 0 12px;
