--- a/scopes/design/ui/empty-box/empty-box.module.scss
+++ b/scopes/design/ui/empty-box/empty-box.module.scss
@@ -1,39 +1,25 @@
 .emptyCompositions {
-  // margin: auto;
-  // padding: 20px;
-  // font-size: var(--p-sm);
-  padding: 50px 40px 0 40px;
-  max-width: 1440px;
-  margin: 0 auto 150px auto;
-  .heading {
-    margin-bottom: unset;
-  }
+  margin: auto;
+  padding: 20px;
+  font-size: var(--p-sm);
 }
 
-// .innerBorder {
-//   border: 1px solid var(--border-color);
-//   padding: 24px;
+.innerBorder {
+  border: 1px solid var(--border-color);
+  padding: 24px;
 
-//   > div {
-//     font-weight: bold;
-//     margin-bottom: 14px;
-//   }
+  > div {
+    font-weight: bold;
+    margin-bottom: 14px;
+  }
 
-//   > a {
-//     color: #897dec;
-//     text-decoration: none;
+  > a {
+    color: #897dec;
+    text-decoration: none;
 
-//     > span {
-//       font-size: var(--p-xxs);
-//       padding-left: 5px;
-//     }
-//   }
-// }
-// .docsMainBlock {
-//   padding: 50px 40px 0 40px;
-//   max-width: 1440px;
-//   margin: 0 auto 150px auto;
-//   .heading {
-//     margin-bottom: unset;
-//   }
-// }
+    > span {
+      font-size: var(--p-xxs);
+      padding-left: 5px;
+    }
+  }
+}
