feat: styles and better UX

--- a/scopes/react/react/docs/base.module.scss
+++ b/scopes/react/react/docs/base.module.scss
@@ -65,3 +65,15 @@
     margin-bottom: 16px;
   }
 }
+.instructions {
+  background-color: #f6f6f6;
+  padding: 20px;
+  border-radius: 8px;
+  margin-top: 0px;
+}
+.title {
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
