updated component card preview and accept overrides from outside (#3490)

--- a/scopes/explorer/ui/base-component-card/preview-container/preview-container.module.scss
+++ b/scopes/explorer/ui/base-component-card/preview-container/preview-container.module.scss
@@ -4,7 +4,7 @@
   height: 0;
   position: relative;
   pointer-events: none;
-  border-radius: 5px;
+  border-radius: 5px 5px 0 0;
 }
 .preview {
   position: absolute;
