--- a/scopes/react/react/docs/base.module.scss
+++ b/scopes/react/react/docs/base.module.scss
@@ -66,14 +66,8 @@
   }
 }
 .instructions {
-  background-color: #f6f6f6;
+  background-color: #fafafa;
   padding: 20px;
   border-radius: 8px;
   margin-top: 0px;
-}
-.title {
-  display: flex;
-  justify-content: center;
-  font-weight: bold;
-  margin-bottom: 10px;
 }
