fix: remove toasts
remove toasts as too verbose and we can't control on docs overview

--- a/scopes/compositions/compositions/compositions.module.scss
+++ b/scopes/compositions/compositions/compositions.module.scss
@@ -69,3 +69,11 @@ $panelBg: #fafafa;
 .compositions {
   padding: 16px 8px 0 8px;
 }
+
+.instructions {
+  background-color: #fafafa;
+  padding: 0 20px;
+  border-radius: 8px;
+  border: 1px solid grey;
+  margin: 20px 0;
+}
