--- a/scopes/defender/tester/ui/tests-page.module.scss
+++ b/scopes/defender/tester/ui/tests-page.module.scss
@@ -21,3 +21,11 @@
 .testBlock {
   margin-bottom: 50px;
 }
+.instructions {
+  background-color: #fafafa;
+  padding: 0 20px;
+  border-radius: 8px;
+  margin-top: 0px;
+  border: 1px solid grey;
+  margin: 20px 0;
+}
