link in default label

--- a/scopes/react/component-highlighter/label/component-label/duo-component-bubble.module.scss
+++ b/scopes/react/component-highlighter/label/component-label/duo-component-bubble.module.scss
@@ -1,8 +1,6 @@
 .duoComponentBubble {
   display: flex;
 
-  font-size: 12px;
-
   //reset styles from card:
   padding: 0;
   border: none;
@@ -21,38 +19,12 @@
   }
 }
 
-.bubble {
-  line-height: 1.68;
-  padding: 0 12px;
-
-  transition: filter 300ms, background-color 300ms;
-  transform: translateZ(0); //fix blurriness in Safari
-
-  // override styles from <a>
-  &:link,
-  &:visited {
-    text-decoration: inherit;
-    color: inherit;
-
-    background: var(--bit-highlighter-color, #eebcc9);
-
-    &:hover {
-      background: var(--bit-highlighter-color-light, #f6dae2);
-    }
-
-    &:active {
-      background: var(--bit-highlighter-color-active, #e79db1);
-      color: inherit;
-    }
-  }
-}
-
-.scopeName {
-  @extend .bubble;
-}
+// .scopeName {
+//   // @extend .bubble;
+// }
 
 .componentName {
-  @extend .bubble;
+  // @extend .bubble;
 
   display: flex;
 }
