--- a/scopes/compositions/ui/composition-card/composition-card.module.scss
+++ b/scopes/compositions/ui/composition-card/composition-card.module.scss
@@ -9,6 +9,12 @@
 
   display: flex;
   flex-direction: column;
+  &:hover {
+    .linkToComposition {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
 }
 
 .compositionContainer {
@@ -27,6 +33,18 @@
   border-top: 1px solid var(--border-color);
   padding: 8px 16px;
   font-size: 0.875em;
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   flex: none;
+  > span {
+    margin-right: 8px;
+  }
+}
+.linkToComposition {
+  color: var(--text-highlight, #2b2b2b);
+  text-decoration: none;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 300ms, visibility 300ms ease-in-out;
 }
