feat: new components and refactor
add icon card and level icon components
refactor to use these components
remove unused from notifications component

--- a/scopes/component/changelog/ui/change-log-page.module.scss
+++ b/scopes/component/changelog/ui/change-log-page.module.scss
@@ -1,7 +1,7 @@
 .changeLogPage {
   padding: 50px 40px 0 40px;
   max-width: 1440px;
-  margin: 0 auto;
+  margin: 0 auto 48px;
   width: 100%;
   overflow-y: scroll;
   @media screen and (max-width: 768px) {
@@ -17,4 +17,8 @@
   // .versions {
   //     overflow-y: scroll;
   // }
+}
+
+.separator2 {
+  margin-bottom: 41px;
 }
