--- a/scopes/react/react/docs/base.module.scss
+++ b/scopes/react/react/docs/base.module.scss
@@ -44,7 +44,7 @@
 
 .mdx {
   font-size: 16px;
-  // to allow user to control culumn alignment via mdx table
+  // to allow user to control column alignment via mdx table
   table,
   th,
   td,
