feat: add instructions
add mdx instructions
place them inside card component and add correct headings
modify styles for conistency

--- a/scopes/compositions/compositions/compositions.module.scss
+++ b/scopes/compositions/compositions/compositions.module.scss
@@ -70,11 +70,20 @@ $panelBg: #fafafa;
   padding: 16px 8px 0 8px;
 }
 
-.openInNewTab {
-  text-decoration: none;
-  color: inherit;
+.noCompositionsPage {
+  padding: 50px 40px 100px 40px;
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
 
-  &:active {
-    color: inherit;
+  @media screen and (max-width: 768px) {
+    width: unset;
+  }
+  .title {
+    margin-bottom: 24px;
+    font-size: var(--h-xs);
+  }
+  .separator {
+    margin-bottom: 41px;
   }
 }
