--- a/scopes/compositions/compositions/compositions.module.scss
+++ b/scopes/compositions/compositions/compositions.module.scss
@@ -70,6 +70,15 @@ $panelBg: #fafafa;
   padding: 16px 8px 0 8px;
 }
 
+.openInNewTab {
+  text-decoration: none;
+  color: inherit;
+
+  &:active {
+    color: inherit;
+  }
+}
+
 .noCompositionsPage {
   padding: 50px 40px 100px 40px;
   width: 100%;
