fix: alert card visual improvements

--- a/scopes/component/changelog/ui/change-log-page.module.scss
+++ b/scopes/component/changelog/ui/change-log-page.module.scss
@@ -2,7 +2,7 @@
   padding: 50px 40px 0 40px;
   max-width: 1440px;
   margin: 0 auto 48px;
-  width: 100%;
+  width: auto;
   overflow-y: scroll;
   @media screen and (max-width: 768px) {
     width: unset;
