--- a/scopes/compositions/compositions/compositions.module.scss
+++ b/scopes/compositions/compositions/compositions.module.scss
@@ -72,7 +72,7 @@ $panelBg: #fafafa;
 
 .noCompositionsPage {
   padding: 50px 40px 100px 40px;
-  width: 100%;
+  width: auto;
   max-width: 1440px;
   margin: 0 auto;
 
