--- a/scopes/defender/tester/ui/tests-page.module.scss
+++ b/scopes/defender/tester/ui/tests-page.module.scss
@@ -1,6 +1,6 @@
 .testsPage {
   padding: 50px 40px 100px 40px;
-  width: 100%;
+  width: auto;
   overflow-y: auto;
   max-width: 1440px;
   margin: 0 auto;
