--- a/scopes/ui-foundation/notifications/ui/notification-center/notification-center.module.scss
+++ b/scopes/ui-foundation/notifications/ui/notification-center/notification-center.module.scss
@@ -1,4 +1,4 @@
-@import '~@teambit/ui.constants.z-indexes/z-indexes.module.scss';
+@import '~@teambit/ui-foundation.ui.constants.z-indexes/z-indexes.module.scss';
 
 $animationTime: 300ms;
 $header-height: 56px;
