--- a/scopes/ui-foundation/uis/top-bar/top-bar.module.scss
+++ b/scopes/ui-foundation/uis/top-bar/top-bar.module.scss
@@ -1,4 +1,4 @@
-@import '~@teambit/ui.constants.z-indexes/z-indexes.module.scss';
+@import '~@teambit/ui-foundation.ui.constants.z-indexes/z-indexes.module.scss';
 $topbarHeight: 56px;
 
 .topbar {
