--- a/scopes/workspace/workspace/ui/workspace/workspace.module.scss
+++ b/scopes/workspace/workspace/ui/workspace/workspace.module.scss
@@ -1,4 +1,4 @@
-@import '~@teambit/ui.constants.z-indexes/z-indexes.module.scss';
+@import '~@teambit/ui-foundation.ui.constants.z-indexes/z-indexes.module.scss';
 
 .emptyContainer {
   height: 100vh;
