fix solo avatar

--- a/scopes/design/ui/Avatar/styles.module.scss
+++ b/scopes/design/ui/Avatar/styles.module.scss
@@ -38,6 +38,13 @@
   height: 100%;
 }
 
+.soloAvatarIcon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
 .default {
   background-color: var(--border-color, #ededed);
   border: 1px solid var(--border-color, #ededed);
