--- a/scopes/react/component-highlighter/component-highlighter/component-highlighter.module.scss
+++ b/scopes/react/component-highlighter/component-highlighter/component-highlighter.module.scss
@@ -2,6 +2,7 @@
   border: solid var(--border-color, #ededed);
   border-width: 0px;
   box-sizing: border-box;
+  height: 100%;
 
   transition: border 300ms;
 
@@ -11,7 +12,6 @@
 
   &.active {
     border-width: 8px;
-    height: 100vh;
     overflow: auto;
   }
 }
