--- a/scopes/ui-foundation/use-box/bottom-link/bottom-link.module.scss
+++ b/scopes/ui-foundation/use-box/bottom-link/bottom-link.module.scss
@@ -3,16 +3,16 @@
   height: 40px;
   display: flex;
   align-items: center;
-  color: var(--text-highlight);
+  color: var(--bit-text-color-heavy, #2b2b2b);
   cursor: pointer;
   text-decoration: unset;
   &:hover {
-    background-color: var(--border-color);
+    background-color: var(--bit-border-color-lightest, #ededed);
   }
   > span {
     &:first-child {
       margin-right: 8px;
-      font-size: var(--p-md);
+      font-size: var(--bit-p-md, 16px);
     }
   }
 }
